--- a/styles/main.css
+++ b/styles/main.css
@@ -112,3 +112,11 @@ html {
      color: rgb(233,50,117);
      font-size: 5rem;
  }
+
+ .clearfix::after {
+    content: ".";
+    visibility: hidden;
+    display: block;
+    height: 0;
+    clear: both;
+ }
