--- a/styles/main.css
+++ b/styles/main.css
@@ -96,6 +96,11 @@ html {
   /* #5 */
 .links-container .navbar-link:hover {
     color: rgb(233,50,117);
+    background-color: white;
+}
+
+a:active{
+  rgb(233,50,117)
 }
 
  .hero-content {
